force-app/main/default/objects/UWM_Translated_Value__mdt/UWM_Translated_Value__mdt.object-meta.xml
<CustomObject>
    <label>UWM Translated Value</label>
    <pluralLabel>UWM Translated Values</pluralLabel>
</CustomObject>