force-app/main/default/objects/UWM_Translated_Value__mdt/fields/Input_Value__c.field-meta.xml
<CustomField>
    <fullName>Input_Value__c</fullName>
    <label>Input Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>