force-app/main/default/objects/UWM_Translated_Value__mdt/fields/Output_Value__c.field-meta.xml
<CustomField>
    <fullName>Output_Value__c</fullName>
    <label>Output Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>