force-app/main/default/objects/UWM_Translated_Value__mdt/fields/UWM_Insights_Mapping__c.field-meta.xml
<CustomField>
    <fullName>UWM_Insights_Mapping__c</fullName>
    <label>UWM Insights Mapping</label>
    <referenceTo>UWM_Insights_Mapping__mdt</referenceTo>
    <relationshipLabel>UWM Translated Values</relationshipLabel>
    <relationshipName>UWM_Translated_Values</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>