force-app/main/default/objects/UWM_Translated_Value__mdt/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Input_Value__c</columns>
    <columns>Output_Value__c</columns>
    <columns>UWM_Insights_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
</ListView>